--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <li><a href="about-us.html" data-title="About us / 关于我们"><span>About us / 关于我们</span></a></li>
         <li><a href="services1.html" data-title="Services and Abilities / 服务与能力"><span>Services and Abilities / 服务与能力</span></a></li>
         <li><a href="product1.html" data-title="Products / 产品"><span>Products / 产品</span></a></li>
+        <li><a href="re.html" data-title="Recruitments / 招聘"><span>Recruitments / 招聘</span></a></li>
         <li><a href="contact-us.html" data-title="Contact Us / 联系我们"><span>Contact Us / 联系我们</span></a></li>
     </ul>
 </nav><!-- End main menu -->
@@ -83,9 +84,10 @@
                             </div>
                             <div class="wrap-btn intro-btns">
                                 <a href="about-us.html" class="btn btn-with-icon btn-small ripple">
-                                    <span>了解更多</span>
+                                    <span>招聘信息</span>
                                     <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
                                 </a>
+
                                 <a href="contact-us.html" class="btn btn-with-icon btn-border btn-small ripple">
                                     <span>联系我们</span>
                                     <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
@@ -381,7 +383,7 @@
                                 <li><a href="about-us.html" class="hover-link" data-title="About us / 关于我们"><span>About us / 关于我们</span></a></li>
                                 <li><a href="services1.html" class="hover-link" data-title="Services and Abilities / 服务与能力"><span>Services and Abilities / 服务与能力</span></a></li>
                                 <li><a href="product1.html" class="hover-link"  data-title="Products / 产品"><span>Products / 产品</span></a></li>
-
+                                <li><a href="re.html"  class="hover-link" data-title="Recruitments / 招聘"><span>Recruitments / 招聘</span></a></li>
                                 <li><a href="contact-us.html" class="hover-link" data-title="Contact Us / 联系我们"><span>Contact Us / 联系我们</span></a></li>
                             </ul>
                         </nav>
@@ -394,19 +396,19 @@
                             <li>
                                 <i class="material-icons md-22">location_on</i>
                                 <div class="footer-contact-info">
-                                    地址
+                                    江苏常州新北区汉江路73号
                                 </div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-tel">smartphone</i>
                                 <div class="footer-contact-info">
-                                    <a href="#!" class="formingHrefTel">电话1</a>, <a href="#!" class="formingHrefTel">电话2</a>
+                                    <a href="#!" class="formingHrefTel">13961123150</a>, <a href="#!" class="formingHrefTel">邰女士</a>
                                 </div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
                                 <div class="footer-contact-info">
-                                    <a href="mailto:mail@example.com">邮箱</a>
+                                    <a href="mailto:mail@example.com">hr001@chuangyue-group.com</a>
                                 </div>
                             </li>
                         </ul>
