--- a/integrationaccessory.html
+++ b/integrationaccessory.html
@@ -55,6 +55,7 @@
                                 <li><a href="about-us.html" data-title="About us / 关于我们"><span>About us / 关于我们</span></a></li>
                                 <li><a href="services1.html" data-title="Services and Abilities / 服务与能力"><span>Services and Abilities / 服务与能力</span></a></li>
                                 <li><a href="product1.html" data-title="Products / 产品"><span>Products / 产品</span></a></li>
+                                <li><a href="re.html" data-title="Recruitments / 招聘"><span>Recruitments / 招聘</span></a></li>
                                 <li><a href="contact-us.html" data-title="Contact Us / 联系我们"><span>Contact Us / 联系我们</span></a></li>
                             </ul>
                         </nav><!-- End main menu -->
