--- a/elevatorwireharness.html
+++ b/elevatorwireharness.html
@@ -139,6 +139,7 @@
         </div>
     </div>
 
+
     <!-- Begin footer -->
     <footer class="footer">
         <div class="footer-main">
@@ -160,7 +161,7 @@
                         </div>
                         <!-- End company info -->
                     </div>
-                    <div class="col-xl-4 offset-xl-1 col-md-3 col-5 col-lg-2 item">
+                    <div class="col-xl-4 offset-xl-1 col-md-5 col-12 col-lg-2 item">
                         <div class="footer-item">
                             <p class="footer-item-heading">Menu</p>
                             <nav class="footer-nav">
@@ -169,7 +170,7 @@
                                     <li><a href="about-us.html" class="hover-link" data-title="About us / 关于我们"><span>About us / 关于我们</span></a></li>
                                     <li><a href="services1.html" class="hover-link" data-title="Services and Abilities / 服务与能力"><span>Services and Abilities / 服务与能力</span></a></li>
                                     <li><a href="product1.html" class="hover-link"  data-title="Products / 产品"><span>Products / 产品</span></a></li>
-
+                                    <li><a href="re.html"  class="hover-link" data-title="Recruitments / 招聘"><span>Recruitments / 招聘</span></a></li>
                                     <li><a href="contact-us.html" class="hover-link" data-title="Contact Us / 联系我们"><span>Contact Us / 联系我们</span></a></li>
                                 </ul>
                             </nav>
@@ -182,19 +183,19 @@
                                 <li>
                                     <i class="material-icons md-22">location_on</i>
                                     <div class="footer-contact-info">
-                                        地址
+                                        江苏常州新北区汉江路73号
                                     </div>
                                 </li>
                                 <li>
                                     <i class="material-icons md-22 footer-contact-tel">smartphone</i>
                                     <div class="footer-contact-info">
-                                        <a href="#!" class="formingHrefTel">电话1</a>, <a href="#!" class="formingHrefTel">电话2</a>
+                                        <a href="#!" class="formingHrefTel">13961123150</a>, <a href="#!" class="formingHrefTel">邰女士</a>
                                     </div>
                                 </li>
                                 <li>
                                     <i class="material-icons md-22 footer-contact-email">email</i>
                                     <div class="footer-contact-info">
-                                        <a href="mailto:mail@example.com">邮箱</a>
+                                        <a href="mailto:mail@example.com">hr001@chuangyue-group.com</a>
                                     </div>
                                 </li>
                             </ul>
