--- a/re.html
+++ b/re.html
@@ -65,54 +65,121 @@
         </nav><!-- End header fixed -->
         </header><!-- End header -->
 
-        <!-- Begin bread crumbs -->
-        <nav class="bread-crumbs">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <ul class="bread-crumbs-list">
-                            <li>
-                                <a href="index.html">Home</a>
-                                <i class="material-icons md-18">chevron_right</i>
-                            </li>
-                            <li>
-                                <a href="services1.html">Services</a>
-                                <i class="material-icons md-18">chevron_right</i>
-                            </li>
-                            <li><a href="#!">Quality System</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav><!-- End bread crumbs -->
-
         <div class="section">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <div class="section-heading heading-center">
-                            <h1>QUALITY SYSTEM/质量系统 (ISO9001)</h1>
+                            <h1>招聘岗位</h1>
                         </div>
                     </div>
                     <div class="content">
                         <div class="row">
-                            <div class="col-7">
-                                <h3>Quality Policy/质量方针</h3>
-                                <p style="font-size: 21px;"> 1. 为顾客提供优质的解决方案和服务，满足客户期望和要求<br>
-                                    Provide high quality solutions and services to the customer, meet customer
-                                    expectations and requirements.
-                                    <br>2. 为员工提供创造价值的平台，为社会做出贡献
-                                    <br>Provide the platform for all the employees to create value, and make
-                                    contributions to the society.
-                                    <br>3. 以精益求精的管理，不断提升企业产品品质
-                                    <br>Use the excelsior management to improve the product quality performance
-                                    continually.
+                            <div class="col-1">
+                            </div>
+                            <div class="col-11">
+                                <h3>线束线缆工程师 1名</h3>
+                                <p style="font-size: 21px;"> 岗位职责：<br>
+                                    1、	负责新产品的工艺成本评估、报价核算等前端开发工作；<br>
+                                    2、	负责主导新产品制样、转产流程，试产、转产过程中的品质、进度确认及问题改善跟进；<br>
+                                    3、	识别新产品试制过程中存在的风险和问题，并组织制订改善措施、制订及落地工艺和品质管理方案；<br>
+                                    4、负责新产品材料检验规范、产品测试规范、SOP等文件及BOM系统维护；<br>
+                                    5、负责新产品新制程、新设备、新材料的工艺技术导入和管理工作；<br>
+                                    6、客户需求变更评审沟通及生产过程中的问题点及时沟通解决；<br>
+                                    7、负责生产技术支持与异常处理、培训；<br>
+                                    8、上级领导安排的其他的工作事项。<br>
+                                    任职要求：<br>
+                                    1、大专及以上学历，机械、材料、电子信息类等相关专业；<br>
+                                    2、三年以上NPI导入相关工作经验，有线束行业制造及质量管理经验；<br>
+                                    3、很强的沟通、协调、团队领导能力，责任心、事业心强。
+
                                 </p>
                             </div>
-                            <div class="col-1"></div>
-                            <div class="col-4">
-                                <img src="assets/img/qs1.png" alt="">
                             </div>
+                        <div class="row">
+                            <div class="col-1">
+                            </div>
+                            <div class="col-11">
+                                <h3>生产主管 1名</h3>
+                                <p style="font-size: 21px;">工作职责：<br>
+                                    1、全面控制、协调生产部门的人员管理和各项生产活动；<br>
+                                    2、负责下达生产计划和任务，安排和控制生产作业进度；<br>
+                                    3、跟踪生产情况、产品需求、生产过程、产值目标，按时完成生产任务；<br>
+                                    4、及时对生产异常做出反应，发现问题及时追踪，并提出合理建议；<br>
+                                    5、负责提高生产效率和改善产品质量的行动计划与实施，报废的控制及分析；<br>
+                                    6、负责生产过程中规范操作方法以的监控及安全生产管理工作；<br>
+                                    7、负责员工的培养、培训、技能考核跟踪、激励和绩效。<br>
+                                    8、上级领导安排的其他的工作事项。<br>
+                                    任职要求：<br>
+                                    1、专科及以上学历，电子信息类相关专业，能读懂图纸；<br>
+                                    2、两年以上制造公司现场管理工作经验，有线束行业管理经验者优先；<br>
+                                    3、具备很强的品质管理、流程优化、统筹组织能力，有很好的分析问题和解决问题的能力；<br>
+                                    4、有较好的领导和组织协调能力、沟通能力、执行能力等。
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-1">
+                            </div>
+                            <div class="col-11">
+                                <h3>人事行政专员兼采购 1名</h3>
+                                <p style="font-size: 21px;">工作内容：<br>
+                                    1、招聘网站管理、简历筛选、邀约、面试安排等；<br>
+                                    2、新员工入离职、转正、社保、公积金等手续办理及档案管理；<br>
+                                    3、执行公司考勤制度，负责员工考勤统计；<br>
+                                    4、负责公司内外训的需求分析与确认、计划整理制定、实施跟踪及结果统计、分析、反馈；<br>
+                                    5、后勤管理、零星采购、公共设施维护及管理、资产管理等日常行政工作；<br>
+                                    6、协助采购根据计划申请采购，并及进下达采购订单，跟踪物料交期；<br>
+                                    7、为丰富员工的生活，组织安排各种文体活动和团队建设；<br>
+                                    8、上级领导安排的其他的工作事项。<br>
+                                    任职要求：<br>
+                                    1、大专及以上学历，三年以上人事行政工作经验，熟练使用WORD、EXCEL等办公软件；<br>
+                                    2、了解人力资源六大模块，熟悉国家、地区及企业关于合同管理、薪金制度、保险福利待遇、培训等方面的法律法规及政策；<br>
+                                    3、工作仔细认真，具有良好的理解能力及抗压能力，工作责任心强、沟通协调能力良好。
+
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-1">
+                            </div>
+                            <div class="col-11">
+                                <h3>设备工程师 1名</h3>
+                                <p style="font-size: 21px;">工作内容：<br>
+                                    1、负责建立健全公司设备资料档案、编制、修订设备的使用、维护、保养制度；<br>
+                                    2、负责编制本公司设备检修周、月、年计划，监督落实计划的执行情况；<br>
+                                    3、负责编制公司设备材料、备件计划，监督落实计划的执行情况；<br>
+                                    4、生产设备安装调试和换模及设备的故障排除和生产线的维护保养；<br>
+                                    5、公司所需设备的评估、引进及验收；<br>
+                                    6、配合工程部门进行样品的制作；<br>
+                                    7、协助工程部门进行工程文件的编写；<br>
+                                    8、上级领导安排的其他的工作事项。<br>
+                                    任职要求：<br>
+                                    1、大专及以上学历，电气工程与自动化、机电一体化等相关专业，能读懂相关设备使用说明书、图纸及电气图；<br>
+                                    2、3年以上生产设备维修调试工作经验，优异的机械维护技能；<br>
+                                    3、良好的沟通、分析能力，工作认真，责任心强。
+
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-1">
+                            </div>
+                            <div class="col-11">
+                                <h3>助理工程师 1名</h3>
+                                <p style="font-size: 21px;">
+                                    任职要求：<br>
+                                    1、机械、电气、机电一体化专业，大专以上学历，应届毕业生亦可；<br>
+                                    2、有志从事产品工艺方向，熟练使用CAD，WORD，EXCEL等常用软件，能适应短期基层一线操作实习；<br>
+                                    3、良好的沟通能力及团队合作精神，有责任心、积极进取、吃苦耐劳；<br>
+                                    4、发展方向技术、质量、售后服务。
+
+                                </p>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
