--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 </p>
                             </div>
                             <div class="wrap-btn intro-btns">
-                                <a href="about-us.html" class="btn btn-with-icon btn-small ripple">
+                                <a href="re.html" class="btn btn-with-icon btn-small ripple">
                                     <span>招聘信息</span>
                                     <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
                                 </a>
