--- a/product1.html
+++ b/product1.html
@@ -127,7 +127,7 @@
 							<!-- Begin news item -->
 							<article class="news-item item-style">
 								<a href="industrialwireharness.html" class="news-item-img">
-									<img data-src="assets/img/p3.png" class="lazy" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="">
+									<img data-src="assets/img/iwh6.jpg" class="lazy" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="">
 								</a>
 								<div class="news-item-info">
 									<h2 class="news-item-heading item-heading">
@@ -172,6 +172,22 @@
 								</div>
 							</article><!-- End news item -->
 						</div>
+                        <div class="col-lg-4 col-md-6 col-12 item">
+                            <!-- Begin news item -->
+                            <article class="news-item item-style">
+                                <a href="medicaltelecom.html" class="news-item-img">
+                                    <img data-src="assets/img/mt3.png" class="lazy" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="">
+                                </a>
+                                <div class="news-item-info">
+                                    <h2 class="news-item-heading item-heading">
+                                        <a href="medicaltelecom.html" title="Key Considerations Of IPaaS">Auto cable / 汽车线束产品</a>
+                                    </h2>
+                                    <div class="news-item-desc">
+                                        <p>汽车线束产品细节展示</p>
+                                    </div>
+                                </div>
+                            </article><!-- End news item -->
+                        </div>
 
 						<div class="col-12">
 						</div>
