--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <!-- Begin news item -->
                         <article class="news-item item-style">
                             <a href="industrialwireharness.html" class="news-item-img">
-                                <img data-src="assets/img/p3.png" class="lazy" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="">
+                                <img data-src="assets/img/iwh6.jpg" class="lazy" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="">
                             </a>
                             <div class="news-item-info">
                                 <h2 class="news-item-heading item-heading">
