--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <div class="col">
                         <div class="intro-content">
                             <div class="section-heading shm-none">
-                                <h1>CHUANGYUE
-                                    <br> 常州创越电子有限公司
+                                <h1 style="font-size: 35px">CHUANGYUE
+                                    <br> 常州市创越电子有限公司
                                 </h1>
                                 <p class="section-desc">Provide Cable Assembly and Connection Solution for Industrial, semi-conductor, Medical and Automobile application.
                                     <br></br>为客户提供工业、半导体、医疗、汽车配套的线束产品和
