--- a/services1.html
+++ b/services1.html
@@ -264,7 +264,7 @@
                                 <li>
                                     <i class="material-icons md-22 footer-contact-email">email</i>
                                     <div class="footer-contact-info">
-                                        <a href="mailto:mail@example.com">hr001@chuangyue-group.com</a>
+                                        <a href="mailto:hr001@chuangyue-group.com">hr001@chuangyue-group.com</a>
                                     </div>
                                 </li>
                             </ul>
