--- a/contact-us.html
+++ b/contact-us.html
@@ -98,23 +98,22 @@
 									<li>
 										<i class="material-icons md-22">location_on</i>
 										<div class="footer-contact-info">
-											<a href="https://www.google.com/maps/place/4730+Crystal+Springs+Dr,+Los+Angeles,+CA+90027,+%D0%A1%D0%A8%D0%90/data=!4m2!3m1!1s0x80c2c08ea296b841:0x5030fc6064b8e8d1?sa=X&ved=2ahUKEwijmtvUqZvjAhXjkIsKHYNsDswQ8gEwAHoECAkQAQ">
-												地址
+											<a href="https://www.google.com/maps/search/%E6%B1%9F%E8%8B%8F%E5%B8%B8%E5%B7%9E%E6%96%B0%E5%8C%97%E5%8C%BA%E6%B1%89%E6%B1%9F%E8%B7%AF73%E5%8F%B7/@31.8333509,119.9287104,14z/data=!3m1!4b1">
+                                                江苏常州新北区汉江路73号
 											</a>
 										</div>
 									</li>
 									<li>
 										<i class="material-icons md-22 footer-contact-tel">smartphone</i>
 										<div class="footer-contact-info">
-											<a href="tel:+13239134688" class="formingHrefTel">电话1</a>
-											<a href="tel:+13238884554" class="formingHrefTel">电话2</a>
+											<a href="tel:+13961123150" class="formingHrefTel">13961123150</a>
+											<a href="tel:+13961123150" class="formingHrefTel">邰女士</a>
 										</div>
 									</li>
 									<li>
 										<i class="material-icons md-22 footer-contact-email">email</i>
 										<div class="footer-contact-info">
-											<a href="mailto:mail@example.com">邮件1</a>
-											<a href="mailto:info@example.com">邮件2</a>
+											<a href="mailto:hr001@chuangyue-group.com">hr001@chuangyue-group.com</a>
 										</div>
 									</li>
 								</ul>
@@ -164,12 +163,6 @@
 					</div>
 				</div>
 			</div>
-
-			<!-- Begin map -->
-			<div class="map">
-				<iframe class="lazy" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.1020346961877!2d-118.2916255847825!3d34.14373158058114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0623fe71971%3A0xc829e89a5dcc767e!2zNDczMCBDcnlzdGFsIFNwcmluZ3MgRHIsIExvcyBBbmdlbGVzLCBDQSA5MDAyNywg0KHQv9C-0LvRg9GH0LXQvdGWINCo0YLQsNGC0Lgg0JDQvNC10YDQuNC60Lg!5e0!3m2!1suk!2sua!4v1621932036298!5m2!1suk!2sua"></iframe>
-			</div><!-- End map -->
-
 		</div>
 
     <!-- Begin footer -->
